--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,23 @@ theme:
         - navigation.tabs
         - navigation.tabs.sticky
         - navigation.sections
-  logo: 'img/logo2.png'
+        - content.action.edit 
+        - navigation.footer
+        - content.code.copy
+  palette:
+    - scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    - scheme: slate
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+  logo: 'img/logo3.png'
   icon:
     admonition:
       note: octicons/tag-16
@@ -24,7 +40,7 @@ theme:
       example: octicons/beaker-16
       prerequisite: octicons/beaker-16
       quote: octicons/quote-16
-
+        
 markdown_extensions:
   - admonition
   - pymdownx.details
@@ -35,13 +51,16 @@ markdown_extensions:
   - pymdownx.mark
   - pymdownx.tilde
   - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - md_in_html
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
-  
+     
 extra_css:
     - stylesheets/extra.css
     
