--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,58 +72,57 @@ extra_javascript:
 nav:
     - About : index.md
     - 2022 Workshops:
-        - Intro to HPC/Slurm For Life Sciences: 
-            - "Introduction": hpc-user-guide/hpc-intro.md
-            - Tufts HPC Cluster Access: 
-                - "Cluster Account and Storage": hpc-user-guide/request-account.md
-                - "Login": hpc-user-guide/login.md
-                - "File Transfer": hpc-user-guide/file-transfer.md
-            - Tufts HPC Cluster Resource:
-                - "Terninologies": hpc-user-guide/what-is-the-cluster.md
-                - "Compute Resources": hpc-user-guide/compute-resources.md
-                - "Software on the Cluster": hpc-user-guide/software-cluster.md
-                - "Tmux Session": hpc-user-guide/tmux.md
-            - SLURM/Linux:
-                - "Interactive Session": hpc-user-guide/interactive-session.md
-                - "Job Status": hpc-user-guide/job-status.md
-                - "Intro To Linux": basic/intro-to-unix/intro-to-unix.md
-                - "Starting with Shell": basic/intro-to-unix/start-w-shell.md
-                - "Bash Parameters": basic/intro-to-unix/bash-parameters.md
-                - "Shell Navigation": basic/intro-to-unix/shell-navigation.md
-                - "Creating & Manipulating Files": basic/intro-to-unix/create-manipulate-files.md
-                - "Going Home": basic/intro-to-unix/going-home.md
-                - "Running an Interactive Session": basic/intro-to-unix/running-interactive.md
-                - "Example with BLAST": basic/intro-to-unix/blast-example.md
-                - "BLAST Batch Script": basic/intro-to-unix/blast-batch.md
-        - Intro to RStudio For Life Sciences:
-            - "Introduction": basic/intro-to-r/r-intro.md
-            - "Setup": basic/intro-to-r/r-ondemand.md
-            - "Intro To R Script": basic/intro-to-r/r-workshop-markdown.md
-        - Intro To 16S Metabarcoding:
-            - "Introduction": omics/intro-to-16S/metabarcoding-intro.md
-            - "Background": omics/intro-to-16S/background.md
-            - "Setup": omics/intro-to-16S/setup.md
-            - "Quality Control": omics/intro-to-16S/quality-control.md
-            - "Error Model & ASVs": omics/intro-to-16S/error-asv.md
-            - "Merging, Chimeras & Taxonomy": omics/intro-to-16S/merging-chimeras-taxonomy.md
-            - "Diversity Analysis": omics/intro-to-16S/diversity-analysis.md
-            - "Differential Abundance": omics/intro-to-16S/differential-abundance.md
-        - Intro To Metagenomics:
-            - "Introduction": omics/intro-metagenomics/intro.md
-            - "Setup": omics/intro-metagenomics/setup.md
-            - "Workshop Notebook": http://htmlpreview.github.io/?https://github.com/tuftsdatalab/tuftsWorkshops/blob/main/docs/omics/intro-metagenomics/Metagenomics.nb.html
-        - Intro To AlphaFold2:
-            - "Introduction": omics/intro-to-alphafold2/00_introduction.md
-            - "Background": omics/intro-to-alphafold2/01_background.md
-            - "Setup": omics/intro-to-alphafold2/02_setup.md
-            - "AlphaFold2 Algorithm": omics/intro-to-alphafold2/03_af2.md
-            - "AlphaFold2 Output": omics/intro-to-alphafold2/05_af2_output.md
-            - "PyMOL Visualization": omics/intro-to-alphafold2/06_pymol_viz.md
-            - "Optional: AlphaFold2 Batch Script": omics/intro-to-alphafold2/07_af2_batch.md
+        - Fall 2022:
+            - Intro to HPC/Slurm For Life Sciences: 
+                - "Introduction": 2022_workshops/introHpcSlurm/01_hpc-intro.md
+                - "Cluster Account and Storage": 2022_workshops/introHpcSlurm/02_request-account.md
+                - "Login": 2022_workshops/introHpcSlurm/03_login.md
+                - "File Transfer": 2022_workshops/introHpcSlurm/04_file-transfer.md
+                - "Terninologies": 2022_workshops/introHpcSlurm/05_what-is-the-cluster.md
+                - "Compute Resources": 2022_workshops/introHpcSlurm/06_compute-resources.md
+                - "Software on the Cluster": 2022_workshops/introHpcSlurm/07_software-cluster.md
+                - "Tmux Session": 2022_workshops/introHpcSlurm/08_tmux.md
+                - "Interactive Session": 2022_workshops/introHpcSlurm/09_interactive-session.md
+                - "Job Status": 2022_workshops/introHpcSlurm/10_job-status.md
+                - "Intro To Linux": 2022_workshops/introHpcSlurm/11_intro-to-unix.md
+                - "Starting with Shell": 2022_workshops/introHpcSlurm/12_start-w-shell.md
+                - "Bash Parameters": 2022_workshops/introHpcSlurm/13_bash-parameters.md
+                - "Shell Navigation": 2022_workshops/introHpcSlurm/14_shell-navigation.md
+                - "Creating & Manipulating Files": 2022_workshops/introHpcSlurm/15_create-manipulate-files.md
+                - "Going Home": 2022_workshops/introHpcSlurm/16_going-home.md
+                - "Running an Interactive Session": 2022_workshops/introHpcSlurm/17_running-interactive.md
+                - "Example with BLAST": 2022_workshops/introHpcSlurm/18_blast-example.md
+                - "BLAST Batch Script": 2022_workshops/introHpcSlurm/19_blast-batch.md
+            - Intro to RStudio For Life Sciences:
+                - "Introduction": 2022_workshops/introRStudio/01_r-intro.md
+                - "Setup": 2022_workshops/introRStudio/02_r-ondemand.md
+                - "Intro To R Script": 2022_workshops/introRStudio/03_r-workshop-markdown.md
+            - Intro To 16S Metabarcoding:
+                - "Introduction": 2022_workshops/intro16S/01_metabarcoding-intro.md
+                - "Background": 2022_workshops/intro16S/02_background.md
+                - "Setup": 2022_workshops/intro16S/03_setup.md
+                - "Quality Control": 2022_workshops/intro16S/04_quality-control.md
+                - "Error Model & ASVs": 2022_workshops/intro16S/05_error-asv.md
+                - "Merging, Chimeras & Taxonomy": 2022_workshops/intro16S/06_merging-chimeras-taxonomy.md
+                - "Diversity Analysis": 2022_workshops/intro16S/07_diversity-analysis.md
+                - "Differential Abundance": 2022_workshops/intro16S/08_differential-abundance.md
+            - Intro To Metagenomics:
+                - "Introduction": 2022_workshops/introMetagenomics/01_intro.md
+                - "Setup": 2022_workshops/introMetagenomics/02_setup.md
+                - "Workshop Notebook": 2022_workshops/introMetagenomics/03_Metagenomics.nb.html
+            - Intro To AlphaFold2:
+                - "Introduction": 2022_workshops/introAlphaFold/00_introduction.md
+                - "Background": 2022_workshops/introAlphaFold/01_background.md
+                - "Setup": 2022_workshops/introAlphaFold/02_setup.md
+                - "AlphaFold2 Algorithm": 2022_workshops/introAlphaFold/03_af2.md
+                - "AlphaFold2 Output": 2022_workshops/introAlphaFold/05_af2_output.md
+                - "PyMOL Visualization": 2022_workshops/introAlphaFold/06_pymol_viz.md
+                - "Optional: AlphaFold2 Batch Script": 2022_workshops/introAlphaFold/07_af2_batch.md
     - 2023 Workshops:
-        - RNA-Seq with Galaxy:
-            - "Introduction": 2023_workshops/galaxyRNASeq/00_Galaxy_introduction.md
-            - "Processing Raw Reads": 2023_workshops/galaxyRNASeq/01_Introduction_and_Setup_noqual.md
-            - "Read Alignment": 2023_workshops/galaxyRNASeq/03_Read_alignment.md
-            - "Gene Quantification": 2023_workshops/galaxyRNASeq/04_Gene_quantification.md
-            - "Differential Expression": 2023_workshops/galaxyRNASeq/05_Diff_expression.md
+        - Spring 2023:
+            - RNA-Seq with Galaxy:
+                - "Introduction": 2023_workshops/galaxyRNASeq/00_Galaxy_introduction.md
+                - "Processing Raw Reads": 2023_workshops/galaxyRNASeq/01_Introduction_and_Setup_noqual.md
+                - "Read Alignment": 2023_workshops/galaxyRNASeq/03_Read_alignment.md
+                - "Gene Quantification": 2023_workshops/galaxyRNASeq/04_Gene_quantification.md
+                - "Differential Expression": 2023_workshops/galaxyRNASeq/05_Diff_expression.md
