--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,6 +110,9 @@ nav:
                 - "Introduction": 2022_workshops/introMetagenomics/01_intro.md
                 - "Setup": 2022_workshops/introMetagenomics/02_setup.md
                 - "Workshop Notebook": 2022_workshops/introMetagenomics/03_Metagenomics.nb.html
+            - Intro To Genome Technology:
+                - "Introduction": 2022_workshops/introGenomeTech/introGenomeTech.md
+                - "Slides": 2022_workshops/introGenomeTech/Rhodes_BioE291.pdf
             - Intro To AlphaFold2:
                 - "Introduction": 2022_workshops/introAlphaFold/00_introduction.md
                 - "Background": 2022_workshops/introAlphaFold/01_background.md
