--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,7 +71,8 @@ extra_javascript:
 
 nav:
     - About : index.md
-    - 2022 Workshops: 2022_workshops/2022_workshops.md
+    - 2022 Workshops: 
+        - "Schedule": 2022_workshops/2022_workshops.md
         - Fall 2022:
             - Intro to HPC/Slurm For Life Sciences: 
                 - "Introduction": 2022_workshops/introHpcSlurm/01_hpc-intro.md
@@ -121,7 +122,8 @@ nav:
                 - "AlphaFold2 Output": 2022_workshops/introAlphaFold/05_af2_output.md
                 - "PyMOL Visualization": 2022_workshops/introAlphaFold/06_pymol_viz.md
                 - "Optional: AlphaFold2 Batch Script": 2022_workshops/introAlphaFold/07_af2_batch.md
-    - 2023 Workshops: 2023_workshops/2023_workshops.md
+    - 2023 Workshops: 
+        - "Schedule": 2023_workshops/2023_workshops.md
         - Spring 2023:
             - RNA-Seq with Galaxy:
                 - "Introduction": 2023_workshops/galaxyRNASeq/00_Galaxy_introduction.md
