--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,7 +144,7 @@ nav:
                 - "Cas12a Variant Visualization": 2023_workshops/cas12aAlphaFold2/03_Cas12a_Variant_Vizualization.md
             - Trajectory Analysis:
                 - "Introduction": 2023_workshops/trajectoryAnalysis/00_background.md
-                - "Setup and Monocl3 Objects": 2023_workshops/trajectoryAnalysis/01_setup_and_seurat.md
+                - "Setup and Monocl3 Objects": 2023_workshops/trajectoryAnalysis/01_setup_and_monocle.md.md
                 - "Monocle Setup and Trajectory Analysis": 2023_workshops/trajectoryAnalysis/02_monocle_setup_and_trajectory_analysis.md
                 - "Pseudotime and Differential Expression": 2023_workshops/trajectoryAnalysis/03_pseudotime_and_differential_expression.md
                 - "Optional: Seurat Manipulation": 2023_workshops/trajectoryAnalysis/0X_seurat_manipulation.md
