--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,6 +151,7 @@ nav:
         - "Schedule": 2024_workshops/readme.md
         - Spring 2024:
             - Running RNA-Seq analysis with nextflow & nf-core:
+                - "Introduction": 2024_workshops/nfcore_rnaseq_sp24/00_introduction.md
                 - "nf-core fetchngs": 2024_workshops/nfcore_rnaseq_sp24/hands-on/01_fetchngs.md
                 - "nf-core rnaseq": 2024_workshops/nfcore_rnaseq_sp24/hands-on/02_rnaseq.md
                 - "nf-core differentialabundance": 2024_workshops/nfcore_rnaseq_sp24/hands-on/03_differentialabundance.md
