--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,4 +155,6 @@ nav:
                 - "nf-core fetchngs": 2024_workshops/nfcore_rnaseq_sp24/01_fetchngs.md
                 - "nf-core rnaseq": 2024_workshops/nfcore_rnaseq_sp24/02_rnaseq.md
                 - "nf-core differentialabundance": 2024_workshops/nfcore_rnaseq_sp24/03_differentialabundance.md
-                - "Final reort": 2024_workshops/nfcore_rnaseq_sp24/04_report.html
+                - "multiqc report": 2024_workshops/nfcore_rnaseq_sp24/04_multiqc_report.html
+                - "differentialabundance reort": 2024_workshops/nfcore_rnaseq_sp24/05_differentialabundance_report.html
+
