--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,7 +153,7 @@ nav:
             - Introduction to Metagenomics:
                 - "In class hands-on session": 2024_workshops/IGDH-1001_2024Feb/Hands-on_session.md
                 - "Take-home exercise": 2024_workshops/IGDH-1001_2024Feb/Take-home_exercise.md
-                - "Take-home exercise announcement.md": 2024_workshops/IGDH-1001_2024Feb/Take-home_exercise_announcement.md
+                - "Take-home exercise announcement": 2024_workshops/IGDH-1001_2024Feb/Take-home_exercise_announcement.md
                 - "Exercise Hint": 2024_workshops/IGDH-1001_2024Feb/Exercise2_hints.pdf
                 - "Example Report": 2024_workshops/IGDH-1001_2024Feb/Exercise3_Example_Report.pdf
             
