--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ edit_uri: blob/main/docs/
 theme:
   name: material
   features:
-        - navigation.tabs
+   #     - navigation.tabs
         - navigation.tabs.sticky
         - navigation.sections
         - content.action.edit 
