--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,7 +60,12 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
-     
+
+plugins:
+  - search
+  - toc:
+      visible: false  # Hides the table of contents on the doc page
+      
 extra_css:
     - stylesheets/extra.css
     
