--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -170,7 +170,8 @@ nav:
                 - "differentialabundance report": 2024_workshops/nfcore_rnaseq_sp24/05_differentialabundance_report.html
         - Fall 2024:
             - Beginner's guide for conducting bioinformatics analysis on Tufts HPC:
-                - "Linux/Unix command line basics": 2024_workshops/bioinformatics101/linux/00_overview.md
+                - "Linux/Unix command line basics":
+                    - "Overview": 2024_workshops/bioinformatics101/linux/00_overview.md
                     - "Introduction to Linux/Unix": 2024_workshops/bioinformatics101/linux/01_what_is_linux.md
                 - "Available bioinformatics resources/tools on Tufts HPC": 2024_workshops/bioinformatics101/01_bioinformatics_resources.md
                 - "Common bioinformatics data formats": 2024_workshops/bioinformatics101/03_bioinformatics_formats.md
