--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -169,10 +169,21 @@ nav:
                 - "multiqc report": 2024_workshops/nfcore_rnaseq_sp24/04_multiqc_report.html
                 - "differentialabundance report": 2024_workshops/nfcore_rnaseq_sp24/05_differentialabundance_report.html
         - Fall 2024:
-            - Beginner's guide for conducting bioinformatics analysis on Tufts HPC:
+            - Getting started with Bioinformatics on Tufts HPC:
                 - "Linux/Unix command line basics":
                     - "Overview": 2024_workshops/bioinformatics101/linux/00_overview.md
                     - "Introduction to Linux/Unix": 2024_workshops/bioinformatics101/linux/01_what_is_linux.md
                 - "Available bioinformatics resources/tools on Tufts HPC": 2024_workshops/bioinformatics101/01_bioinformatics_resources.md
                 - "Common bioinformatics data formats": 2024_workshops/bioinformatics101/03_bioinformatics_formats.md
                 - "How to submit bioinformatics jobs to Tufts HPC": 2024_workshops/bioinformatics101/04_bioinformatics_jobs.md     
+           - Software installation and environment management in HPC:
+               - "TBD":
+                    - "Overview": 2024_workshops/bioinformatics201/00_introduction.md
+           - Advanced HPC workflows and job management:
+               - "Array jobs": 
+                    - "Overview": 2024_workshops/bioinformatics301/array/00_introduction.md
+               - "Nextflow and nf-core":
+                    - "Overview": 2024_workshops/bioinformatics301/nfcore/00_introduction.md
+
+
+
