--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -173,6 +173,10 @@ nav:
                 - "Linux/Unix command line basics":
                     - "Overview": 2024_workshops/bioinformatics201/linux/00_overview.md
                     - "Introduction to Linux/Unix": 2024_workshops/2024_bioinformatics201/linux/01_what_is_linux.md
+                    - "Files and File system": 2024_workshops/2024_bioinformatics201/linux/02_files.md
+                    - "Must-known Linux/Unix tools": 2024_workshops/2024_bioinformatics201/linux/03_basictools.md
+                    - "Conditional statements and loops": 2024_workshops/2024_bioinformatics201/linux/04_loops.md
+                    - "Advanced Linux/Unix tools": 2024_workshops/2024_bioinformatics201/linux/05_advanced_tools.md
                 - "Available bioinformatics resources/tools on Tufts HPC": 2024_workshops/2024_bioinformatics201/01_bioinformatics_resources.md
                 - "Common bioinformatics data formats": 2024_workshops/2024_bioinformatics201/03_bioinformatics_formats.md
                 - "How to submit bioinformatics jobs to Tufts HPC": 2024_workshops/2024_bioinformatics201/04_bioinformatics_jobs.md     
