--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -178,11 +178,13 @@ nav:
                     - "Conditional statements and loops": 2024_workshops/2024_bioinformatics201/linux/04_loops.md
                     - "Advanced Linux/Unix tools": 2024_workshops/2024_bioinformatics201/linux/05_advanced_tools.md
                 - "Available bioinformatics resources/tools on Tufts HPC": 2024_workshops/2024_bioinformatics201/02_tufts_bioinformatics_resources.md
-                - "Common bioinformatics data formats": 2024_workshops/2024_bioinformatics201/03_bioinformatics_formats.md
-                - "How to submit bioinformatics jobs to Tufts HPC": 2024_workshops/2024_bioinformatics201/04_bioinformatics_jobs.md     
+                - "How to run bioinformatics analysis on Tufts HPC": 2024_workshops/2024_bioinformatics201/03_run_bioinformatics_on_HPC.md 
             - Software installation and environment management in HPC:
-                - "TBD":
-                    - "Overview": 2024_workshops/2024_bioinformatics301/00_introduction.md
+                - "Overview": 2024_workshops/2024_bioinformatics301/00_introduction.md
+                - "Application Installation from Source Codes": 2024_workshops/2024_bioinformatics301/01_source.md
+                - "R package Installation": 2024_workshops/2024_bioinformatics301/02_Rpackage.md
+                - "Conda Environment Management, Jupyer Kernel and Modules": 2024_workshops/2024_bioinformatics301/03_conda.md
+                - "Simplying Conda Environment Management with conda-env-mod": 2024_workshops/2024_bioinformatics301/04_conda-env-mod.md
             - Advanced HPC workflows and job management: 
                 - "Overview": 2024_workshops/2024_bioinformatics401/00_introduction.md
                 - "Array jobs": 2024_workshops/2024_bioinformatics401/01_array_jobs.md
