--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -170,7 +170,7 @@ nav:
                 - "differentialabundance report": 2024_workshops/nfcore_rnaseq_sp24/05_differentialabundance_report.html
         - Fall 2024:
             - "Workshop Agenda": 2024_workshops/2024_bioinformatics_workshop_agenda.md
-            - 1. Introduction to HPC: 
+            - 1. Introduction to Tufts HPC Cluster: 
                 - "Introduction to Tufts HPC Cluster": 2024_workshops/2024_bioinformatics101/Intro2HPC/readme.md
                 - "Tufts HPC Terminologies": 2024_workshops/2024_bioinformatics101/Intro2HPC/00_Tufts_HPC_Terminologies.md
                 - "Getting to Know Tufts HPC Cluster Resources": 2024_workshops/2024_bioinformatics101/Intro2HPC/01_Getting_to_Know_Tufts_HPC_Cluster_Resources.md
