--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -195,7 +195,7 @@ nav:
             - 4. Advanced HPC workflows and job management: 
                 - "Overview": 2024_workshops/2024_bioinformatics401/00_introduction.md
                 - "Array jobs": 2024_workshops/2024_bioinformatics401/01_array_jobs.md
-                - "Nextflow Overview": 2024_workshops/2024_bioinformatics401/02_nextflow.md
+                - "Nextflow Overview": 2024_workshops/2024_bioinformatics401/02_nextflow_tufts-2024Fall.pdf
                 - "How to run nf-core pipelines": 2024_workshops/2024_bioinformatics401/03_nfcore.md
 
 
